location info in mega + new styling to prevent wrapping weirdness

--- a/wp-content/themes/great-outdoor/css/sass/_header.scss
+++ b/wp-content/themes/great-outdoor/css/sass/_header.scss
@@ -261,6 +261,10 @@ header{
             &.fifth{
                 width: 18%;
                 margin: .5em 1%;
+
+                &:nth-child(5n+1){
+                    clear: left;
+                }
             }
 
             &.quarter{
